[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Objects/Doors/MetalDoor/metaldoor.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Objects/Doors/MetalDoor/MetalDoor.gd" type="Script" id=3]
[ext_resource path="res://src/Equipment/c4.png" type="Texture" id=4]
[ext_resource path="res://src/Game/assets/audio/c4.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/Game/assets/audio/explosion.mp3" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 128 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 128 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="MetalDoor" type="StaticBody2D"]
z_index = 5
collision_layer = 20480
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -128 )
texture = ExtResource( 1 )
offset = Vector2( 0.179699, 128.193 )

[node name="C4" type="Sprite" parent="."]
position = Vector2( 0, -128 )
texture = ExtResource( 4 )
offset = Vector2( 0.179699, 128.193 )

[node name="C4_noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 1000.0

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 1000.0

[node name="C4_timer" type="Timer" parent="."]
one_shot = true

[node name="Door_collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
shape = SubResource( 2 )

[node name="Interaction_timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = -272.0
margin_right = 112.0
margin_bottom = -152.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 134.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "Door"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 4 )
text = "Hold [F] to Lockpick"
align = 1

[node name="Action2" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 77.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "Hold [X] to use C4"
align = 1

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 104.0
margin_right = 210.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 5 )
step = 1.0
rounded = true

[connection signal="timeout" from="C4_timer" to="." method="_on_C4_timer_timeout"]
[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
